--- a/.github/test-cases.yml
+++ b/.github/test-cases.yml
@@ -1,4 +1,50 @@
+summary: |
+   Отображение страницы на разных устройствах
+  requirement: |
+   Корректное отобрадение всех баннеров, товаров при изменении разрешения
+  prerequisites: |
+   открыты главная страница сайта и панель  разработчика браузера
+  test-data: |
+  -
+  steps:
+   изменяем разрешение экрана на:
+- 414х896
+- 360х740
+- 853х1280
+- 1280х800
+  expected-result: |
+    Все баннеры должны равномерно распределятся по экрану, ничего не должно уходить за поле видимости в бок
+    status:fail
 
+summary: |
+    проверка невозможности заказа товара количеством большим, чем имеется
+  requirement: |
+ не должно добавляться в корзину товаров количеством большим, чем есть на складе
+  prerequisites: |
+  открыта страница заказа
+  test-data: |
+ имеется информация о наличие товара
+  steps:
+    - добавить в корзину товар,количеством превышающим наличие
+  expected-result: |
+   максимальное количество товара d rjhpbyt равно количеству на складе
+    status:pass
+
+    
+summary: |
+    невозможность добавления в корзину отсутствующего товара
+  requirement: |
+ не должно добавляться в корзину товаров товар, отсутствующий на складе
+  prerequisites: |
+  открыта страница заказа
+  test-data: |
+ имеется информация о наличие товара
+  steps:
+    - добавить в корзину товар отсутствующий на складе
+    - перейти в корзину, нажать "Checkout"
+  expected-result: |
+  товар не добавляется в корзину
+    status:fail
 
 summary: |
    Отображение страницы на разных устройствах
@@ -16,18 +62,4 @@ summary: |
 - 1280х800
   expected-result: |
     Все баннеры должны равномерно распределятся по экрану, ничего не должно уходить за поле видимости в бок
-
-summary: |
-    проверка невозможности заказа товара количеством большим, чем имеется
-  requirement: |
- при вводе количества товара, большим чем имеется, должен появится предупреждающий юбаннер
-  prerequisites: |
-  открыта страница заказа
-  test-data: |
- имеется информация о наличие товара
-  steps:
-    - добавить в корзину товар,количеством превышающим наличие
-  expected-result: |
-    появился предупреждающий баннер
-
-
+    status:fail
