--- a/.github/test-cases.yml
+++ b/.github/test-cases.yml
@@ -47,19 +47,29 @@ summary: |
     status:fail
 
 summary: |
-   Отображение страницы на разных устройствах
+   Перевод страницы и всего содержания на русский язык
   requirement: |
-   Корректное отобрадение всех баннеров, товаров при изменении разрешения
+   перевод всех элементов страницы на русский язык
   prerequisites: |
-   открыты главная страница сайта и панель  разработчика браузера
+   открыты главная страница сайта 
   test-data: |
   -
   steps:
-   изменяем разрешение экрана на:
-- 414х896
-- 360х740
-- 853х1280
-- 1280х800
+- выбор на вкладке "Язык" русской версии страницы
   expected-result: |
-    Все баннеры должны равномерно распределятся по экрану, ничего не должно уходить за поле видимости в бок
+    Все баннеры должны переводятся на русский язык
+    status:fail
+
+    summary: |
+   Невозможность установить отрицательное значение цены в фильтре
+  requirement: |
+  Невозможность установить отрицательное значение цены в фильтре  
+  prerequisites: 
+   открыты главная страница сайта 
+  test-data: |
+  - цена -"3"
+  steps:
+- выбор на вкладке "Цена" отрицательного значения цены
+  expected-result: |
+    при возможности выбора цены 
     status:fail
