--- a/bugreports.yml
+++ b/bugreports.yml
@@ -23,23 +23,12 @@
     На странице элементы фильтров идут выше чем основное наполнение страницы, изменяется вид картинок (растягиваются по горизонтали), верхняя шапка обрывается не доходя до края страницы
 ---
 - summary: |
-    Короткое описание ошибки
+    Перевод страницы на русский языки
   environment: |
     version 1 https://hexlet-products-store.vercel.app/ Yandex Brauser version 24.10.1.598 (64-bit)
   steps-to-reproduce: |
-    Полный перечень шагов для воспроизведения и описание, на каком шаге произошла ошибка
+   - перевод страницы на русский язык через вкладку "Язык"=>"Русский язык"
   expected-result: |
-    Какой результат должен быть без ошибки
+    Правильный перевод текста на странице на русский язык
   actual-result: |
-    Какой результат получился на самом деле
----
-- summary: |
-    Короткое описание ошибки
-  environment: |
-    version 1 https://hexlet-products-store.vercel.app/ Yandex Brauser version 24.10.1.598 (64-bit)
-  steps-to-reproduce: |
-    Полный перечень шагов для воспроизведения и описание, на каком шаге произошла ошибка
-  expected-result: |
-    Какой результат должен быть без ошибки
-  actual-result: |
-    Какой результат получился на самом деле
+    Переводятся только навигационные надписи, шапка и раздел фильтров.Не переводятся описания товарови их названия
