--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,34 +1,13 @@
 ---
 - summary: |
     Установка в поле фильтров отрицательного значения цены товара
-  environment: |
-    version 1 https://hexlet-products-store.vercel.app/ Yandex Brauser version 24.10.1.598 (64-bit)
-  steps-to-reproduce: |
-    открыта главная страница сайта
-- в графах цена устанавливается значение цены "-3"
-  expected-result: |
-    возможная цена товара ограничивается диапазоном от 0 и более
-  actual-result: |
-  возможно установление отрицательных значений цены
+ status:fail
+ 
 ---
 - summary: |
     отсутствует адаптивность страницы при изменение разрешения
-  environment: |
-    version 1 https://hexlet-products-store.vercel.app/ Yandex Brauser version 24.10.1.598 (64-bit)
-  steps-to-reproduce: |
-    с помощью панели "Инструменты разработчика" было изменено разрешение на 430х932
-  expected-result: |
-    В ходе изменений должно быть гармоничное расположение элементов на странице
-  actual-result: |
-    На странице элементы фильтров идут выше чем основное наполнение страницы, изменяется вид картинок (растягиваются по горизонтали), верхняя шапка обрывается не доходя до края страницы
+ status:fail
 ---
 - summary: |
     Перевод страницы на русский языки
-  environment: |
-    version 1 https://hexlet-products-store.vercel.app/ Yandex Brauser version 24.10.1.598 (64-bit)
-  steps-to-reproduce: |
-   - перевод страницы на русский язык через вкладку "Язык"=>"Русский язык"
-  expected-result: |
-    Правильный перевод текста на странице на русский язык
-  actual-result: |
-    Переводятся только навигационные надписи, шапка и раздел фильтров.Не переводятся описания товарови их названия
+   status:fail
