--- a/about.yml
+++ b/about.yml
@@ -1,14 +1,16 @@
 ---
 # Если хотите пояснить код, можно добавить комментарий с помощью символа #
-name: Anastasia Khromova
-job: QA Engineer? 
+name: Ilona Maskova # Ваше имя
+job: QA Engineer
 level: junior
-email: n89038624324@yandex.ru
+email: ilona@hexlet.io
 description: |
   Этот текст — описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя.
 
   Текст можно написать в несколько абзацев
-skills: 
+skills: # Список навыков в виде списка, можете написать сюда что-то свое
+  - Функциональное тестирование
+  - Написание багрепортов
   - Linux
   - Слепая печать
-  - Английский язык B2
+  - Английский язык C1
