--- a/.github/test-cases.yml
+++ b/.github/test-cases.yml
@@ -4,8 +4,7 @@ summary: |
    Корректное отобрадение всех баннеров, товаров при изменении разрешения
   prerequisites: |
    открыты главная страница сайта и панель  разработчика браузера
-  test-data: |
-  -
+  test-data:
   steps:
    изменяем разрешение экрана на:
 - 414х896
@@ -15,7 +14,7 @@ summary: |
   expected-result: |
     Все баннеры должны равномерно распределятся по экрану, ничего не должно уходить за поле видимости в бок
     status:fail
-
+---
 summary: |
     проверка невозможности заказа товара количеством большим, чем имеется
   requirement: |
@@ -29,8 +28,7 @@ summary: |
   expected-result: |
    максимальное количество товара d rjhpbyt равно количеству на складе
     status:pass
-
-    
+---
 summary: |
     невозможность добавления в корзину отсутствующего товара
   requirement: |
@@ -45,21 +43,20 @@ summary: |
   expected-result: |
   товар не добавляется в корзину
     status:fail
-
+---
 summary: |
    Перевод страницы и всего содержания на русский язык
   requirement: |
    перевод всех элементов страницы на русский язык
   prerequisites: |
    открыты главная страница сайта 
-  test-data: |
-  -
+  test-data: 
   steps:
 - выбор на вкладке "Язык" русской версии страницы
   expected-result: |
     Все баннеры должны переводятся на русский язык
     status:fail
-
+---
     summary: |
    Невозможность установить отрицательное значение цены в фильтре
   requirement: |
