--- a/.github/test-cases.yml
+++ b/.github/test-cases.yml
@@ -1,16 +1,14 @@
+
 summary: |
-   Отображение страницы на разных устройствах
+    проверка невозможности заказа товара количеством большим, чем имеется
   requirement: |
-   Корректное отобрадение всех баннеров, товаров при изменении разрешения
+ не должно добавляться в корзину товаров количеством большим, чем есть на складе
   prerequisites: |
-   открыты главная страница сайта и панель  разработчика браузера
-  test-data:
+  открыта страница заказа
+  test-data: |
+ имеется информация о наличие товара
   steps:
-   изменяем разрешение экрана на:
-- 414х896
-- 360х740
-- 853х1280
-- 1280х800
+    - добавить в корзину товар,количеством превышающим наличие
   expected-result: |
-    Все баннеры должны равномерно распределятся по экрану, ничего не должно уходить за поле видимости в бок
-    status:fail
+   максимальное количество товара d rjhpbyt равно количеству на складе
+    status:pass
