--- a/.github/test-cases.yml
+++ b/.github/test-cases.yml
@@ -1,14 +1,13 @@
-
-summary: |
-    проверка невозможности заказа товара количеством большим, чем имеется
+    summary: |
+   Невозможность установить отрицательное значение цены в фильтре
   requirement: |
- не должно добавляться в корзину товаров количеством большим, чем есть на складе
-  prerequisites: |
-  открыта страница заказа
+  Невозможность установить отрицательное значение цены в фильтре  
+  prerequisites: 
+   открыты главная страница сайта 
   test-data: |
- имеется информация о наличие товара
+  - цена -"3"
   steps:
-    - добавить в корзину товар,количеством превышающим наличие
+- выбор на вкладке "Цена" отрицательного значения цены
   expected-result: |
-   максимальное количество товара d rjhpbyt равно количеству на складе
-    status:pass
+    при возможности выбора цены 
+    status:fail
